# Generated BUILD.bazel for doc

load("//:defs.bzl", "COPTS", "LINKOPTS", "DEFAULT_VISIBILITY")

package(default_visibility = DEFAULT_VISIBILITY)

# Export all local files for cross-package references
exports_files(glob(["*.cc", "*.h"], allow_empty = True))

# Header library for cross-package includes (sandbox compatible)
cc_library(
    name = "doc_headers",
    hdrs = glob(["*.h","*.cc"], allow_empty = True),
    deps = ["//:config_h"],
    visibility = ["//visibility:public"],
)
